--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body class="overflow-auto">
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary ">
             <!-- <a class="navbar-brand" href="#">Navbar</a> -->
@@ -59,7 +59,7 @@
         </div>
 
     </header>
-    <div class="second_page" id="page_2">
+    <div class="second_page overflow-auto" id="page_2">
         <div class="container" style="padding: 20vh 0vh; ">
             <div class="row">
                 <div class="col-md-7">
@@ -88,10 +88,10 @@
     </div>
 
     <!-- Third page ie certifications start from here -->
-    <div id="page_3" class="third_page">
+    <div id="page_3" class="third_page overflow-auto">
         <div class="certi_box">
-        <h1 class="certi" style="color: white;  font: 3.0vw monospace; ">My Certifications</h1>
-        <div class="coursera "><a class="course_names" href="https://www.coursera.org/account/accomplishments/certificate/XZTDUGTP2WGH" target="_blank">Algorithmic Toolbox <br>-Coursera </a></div>
+        <h1 class="certi" style="color: white;  font: 35px monospace; ">My Certifications</h1>
+        <div class="coursera"><a class="course_names" href="https://www.coursera.org/account/accomplishments/certificate/XZTDUGTP2WGH" target="_blank">Algorithmic Toolbox <br>-Coursera </a></div>
         <div class="coursera"><a class="course_names" href="https://github.com/vikas0104/TCS-ion/blob/master/79630_4_8304532.pdf" target="_blank">Carreer Edge- Knockdown the lockdown <br>-TCS ion </a></div>
         <div class="coursera "><a class="course_names" href="https://www.coursera.org/account/accomplishments/certificate/3JMCY7B4A9YF" target="_blank">Computer Vision Basics <br>-Coursera </a></div>
         <div class="coursera "><a class="course_names" href="https://www.coursera.org/account/accomplishments/certificate/HPMCTLT6FCZV" target="_blank">Python Data Structures <br>-Coursera </a></div>
@@ -105,7 +105,7 @@
         </div>
 
         </div>
-        <div id="page_4" class="fourth_page">
+        <div id="page_4" class="fourth_page overflow-auto">
             <div class="contact_me">
                 <h2 style="font-family: monospace;">I am available for any opportunities here..</h2>
                 <a href="https://www.linkedin.com/in/vikas-kumar0104/" target="_blank"><i class="cont fa fa-linkedin" ></i></a>
